# nix-alien

./: .envrc  .gitignore  LICENSE  Makefile  README.md  checks.nix  compat.nix  default.nix  flake.nix  integration-tests.nix  nix-alien.nix  nix-index-update.nix  nix-index-update.sh  overlay.nix  overrides.nix  pylddwrap.nix  pyproject.toml  requirements.txt  shell.nix  treefmt.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  flakehub-publish-rolling.yml  update-flake-lock.yml
nix_alien/: __init__.py  __main__.py  _impl.py  _version.py  fhs_env.py  fhs_env.template.nix  fhs_env_flake.template.nix  fhs_shell.py  helpers.py  ld_shell.py  libs.py  nix_ld.py  nix_ld.template.nix  nix_ld_flake.template.nix
src/: pyproject.toml
src/nix_alien/: _impl.py  _version.py  fhs_env.template.nix  fhs_env_flake.template.nix  helpers.py  libs.py  nix_ld.py  nix_ld.template.nix
src/tests/: test_fhs_env.py  test_helpers.py  test_libs.py  test_nix_ld.py
tests/: test_fhs_env.py  test_fhs_shell.py  test_helpers.py  test_ld_shell.py  test_libs.py  test_nix_ld.py
