[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nix_alien"
version = "0.1.0"
description = "Run unpatched binaries on Nix/NixOS"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nix", "nixos"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pylddwrap",
    "pyfzf",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
]

[project.scripts]
nix-alien = "nix_alien.fhs_env:main"
nix-alien-ld = "nix_alien.nix_ld:main"
nix-alien-find-libs = "nix_alien.libs:main"

[tool.setuptools.package-data]
nix_alien = ["*.nix"]
