[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nix_alien"
description = "Run unpatched binaries on Nix/NixOS"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["nix", "nixos"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pylddwrap",
    "pyfzf",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
]

[project.scripts]
nix-alien = "nix_alien.fhs_env:main"
nix-alien-ld = "nix_alien.nix_ld:main"
nix-alien-find-libs = "nix_alien.libs:main"

[tool.setuptools.package-data]
nix_alien = ["*.nix"]

[tool.setuptools.dynamic]
version = {attr = "nix_alien._version.__version__"}
