[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nix_alien"
description = "Run unpatched binaries on Nix/NixOS"
dependencies = [
    "pyfzf",
    "pylddwrap",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
nix-alien = "nix_alien.fhs_env:main"
nix-alien-ld = "nix_alien.nix_ld:main"
nix-alien-find-libs = "nix_alien.libs:main"

[tool.setuptools.package-data]
nix_alien = ["*.nix"]

[tool.setuptools.dynamic]
version = {attr = "nix_alien._version.__version__"}

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "PL",  # pylint
    "RUF", # ruff
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
ignore = [
    "PLR0913" # too-many-arguments
]
